<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_transaksi"
        android:title="@string/menu_order" />
    <item
        android:id="@+id/topup"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_topup" />

    <item
        android:id="@+id/saldo"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_saldo" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profil"
        android:title="@string/menu_profile" />

</menu>
