<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayou2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/otp_title"
                    android:textColor="@color/trueBlack"
                    android:textSize="@dimen/subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sent_to_91_xxxx_xxx"
                    android:textColor="@color/trueBlack"
                    android:textSize="@dimen/subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_round_1"
                android:gravity="center"
                android:text="@string/otp_button_text"
                android:textColor="@color/buttontrans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/text_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dmsans_medium"
                android:gravity="center_horizontal"
                android:text="Kirim permintaan ulang kode 00:00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify" />

            <LinearLayout
                android:id="@+id/lresend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_msg"
                    android:textColor="@color/trueBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_bold"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/resend_again_msg"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <EditText
                    android:id="@+id/otp_edit_text1"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />

                <EditText
                    android:id="@+id/otp_edit_text2"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />

                <EditText
                    android:id="@+id/otp_edit_text3"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />

                <EditText
                    android:id="@+id/otp_edit_text4"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />

                <EditText
                    android:id="@+id/otp_edit_text5"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:layout_marginEnd="@dimen/margin_right_otp"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />

                <EditText
                    android:id="@+id/otp_edit_text6"
                    android:layout_width="@dimen/et_otp_width"
                    android:layout_height="@dimen/et_otp_height"
                    android:background="@drawable/bgedittex"
                    android:gravity="center_horizontal"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/trueBlack" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/constraintlayou2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_otp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_timer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>